# mahalakshmi-pos

./: .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  docker-compose.prod.yml  package-lock.json  package.json  render.yaml  todo.txt
WhatsApp Bot/: .env.example  .gitignore  README.md  main.py  pyproject.toml
WhatsApp Bot/app/: __init__.py  config.py  db.py  dependencies.py  enums.py  main.py  models.py  schemas.py
WhatsApp Bot/app/routers/: branches.py  health.py  sales.py  webhook.py
WhatsApp Bot/app/services/: __init__.py  auth_service.py  bot.py  sales.py
WhatsApp Bot/tests/: test_bot_service.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  gunicorn.conf.py  migrate.py  pyproject.toml  test_pydantic.py  test_seq.py
backend/app/: __init__.py  main.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/core/: config.py  database.py  middleware.py  security.py
backend/app/db/: __init__.py  database.py  default_items.py  schema_guards.py  startup.py  storage.py
backend/app/models/: __init__.py  audit_log.py  base.py  bill.py  daily_price.py  enums.py  expense.py  inventory.py  item.py  item_category.py  item_change_event.py  payment.py  receipt.py  shop.py  shop_item_allocation.py  user.py  whatsapp.py
backend/app/routers/: __init__.py  admin.py  auth.py  catalog.py  health.py  shop.py
backend/app/schemas/: __init__.py  admin.py  auth.py  billing.py  expenses.py  inventory.py  pricing.py  whatsapp.py
backend/app/services/: admin.py  audit.py  auth.py  billing.py  expenses.py  inventory.py  pricing.py  reports.py  storage.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_current_schema.py  0002_drop_legacy_item_image_data.py  0003_add_shop_scoped_items.py  0004_add_item_created_at.py  0005_add_shop_item_allocations.py  0006_add_item_price_query_indexes.py  0007_add_item_custom_attributes.py  0008_admin_item_management_improvements.py  0009_admin_item_search_indexes.py  0010_add_item_categories.py  0015_inventory_management.py  0016_inventory_item_perf.py  0018_expenses.py  (+12 more)
backend/scripts/: backfill_item_thumbnails.py  push_item_images.py
(+148 files in other folders)
