[project]
name = "whatsapp-bot"
version = "0.1.0"
description = "WhatsApp sales bot for the Meat Billing System"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "fastapi-guard>=7.0.0",
    "pydantic-settings>=2.6.0",
    "python-whatsapp-bot>=2.0.3",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
