[project]
name = "backend"
version = "0.1.0"
description = "Backend API for the Meat Billing System"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.16.0",
    "boto3>=1.39.0",
    "fastapi>=0.115.0",
    "pillow>=11.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "pwdlib[argon2]>=0.2.1",
    "python-jose[cryptography]>=3.3.0",
    "reportlab>=4.2.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.32.0",
    "uvicorn-worker>=0.4.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
